# ShapeEstimation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: create_datasets.py  generate_dataset.py  test_model.py  train_model.py  validate_model.py
src/shapest/: __init__.py  data.py  inference.py  models.py  utils.py
